bad/return_array_in_func_returning_class.example_compiler_output
ERROR
[1mbad/return_array_in_func_returning_class.lat:4:19: [1;31merror: [0;1mreturned value of type `int[]` is not convertible to return type `Y`[m
Y test() { return new int[3]; }
                  [1;32m^[m
